--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         name: [
           alpine-x86_64,
