--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -111,7 +111,10 @@ jobs:
         npm install --ignore-scripts 
         node .prebuild/buildify.js
 
-    - run: ls prebuilds/
+    - run: tree prebuilds
+      if: runner.os == 'Windows'
+    - run: tree prebuilds
+      if: runner.os != 'Windows'
     
     # - uses: AButler/upload-release-assets@v2.0
     #   with:
