chore: switch to self hosted arm64 runner for osx m1 builds

--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -75,7 +75,7 @@ jobs:
             os: macOS-latest
           
           - name: darwin-arm64
-            os: ['self-hosted', 'ondemand', 'os=macos-arm', 'arm64']
+            os: ['self-hosted', 'macOS', 'ARM64']
 
           - name: windows-x86_64
             os: windows-2019
