--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -108,7 +108,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-        
+        architecture: x64
     
     - name: macOS - Prebuild Binaries
       if: runner.os == 'macOS'
