--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -113,6 +113,7 @@ jobs:
     - name: macOS - Prebuild Binaries
       if: runner.os == 'macOS'
       run: |
+        corepack enable # we use yarn
         yarn install --ignore-scripts
         node .prebuild/buildify.js
 
