feat: add post build steps (testing, and npm publish dry-run)

--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -149,3 +149,9 @@ jobs:
           name: prebuilds
           path: prebuilds
       - run: tree prebuilds
+      - run: yarn
+      - run: yarn lint
+      - run: yarn build
+      - run: yarn test
+      - name: Publish to NPM
+        run: npm publish --dry-run
