--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -1,17 +1,10 @@
-name: "Prebuild Binaries"
+name: "Release"
 
 on:
-  pull_request:
-    types:
-      - opened
-      - edited
-      - synchronize
-      - labeled
-      - unlabeled
-      - reopened
+  workflow_dispatch: {}
 
 jobs:
-  build:
+  prebuild:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -129,21 +122,18 @@ jobs:
         name: prebuilds
         path: prebuilds
     
-    # - uses: AButler/upload-release-assets@v2.0
-    #   with:
-    #     files: 'prebuilds/**/*.tar.gz'
-    #     repo-token: ${{ secrets.GITHUB_TOKEN }}
-    #     release-tag: ${{ github.event.inputs.tag }}
-
-  post-build:
+  release:
     runs-on: ubuntu-latest
     needs:
-      - build
+      - prebuild
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 16.x
+          node-version: 19.x
+          registry-url: "https://registry.npmjs.org" # required to use auth
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - uses: actions/download-artifact@v3
         with:
           name: prebuilds
