--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,4 +144,4 @@ jobs:
       - run: yarn build
       - run: yarn test
       - name: Publish to NPM
-        run: npm publish --dry-run
+        run: npm publish
