--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,5 +144,6 @@ jobs:
       - run: yarn lint
       - run: yarn build
       - run: yarn test
+      - run: npm login # test
       - name: Publish to NPM
         run: npm publish
