--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,4 +146,4 @@ jobs:
       - run: yarn test
       - run: npm login # test
       - name: Publish to NPM
-        run: npm publish
+        run: npm publish --access public
