--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,13 +128,12 @@ jobs:
       - prebuild
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3.6.0
         with:
           node-version: 19.x
-          scope: '@cdktf'
           registry-url: "https://registry.npmjs.org" # required to use auth
         env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - uses: actions/download-artifact@v3
         with:
           name: prebuilds
