--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "cross-env": "^5.1.4",
+    "decompress": "^4.2.1",
+    "decompress-targz": "^4.1.1",
     "eslint": "^6.8.0",
     "mocha": "^7.1.1",
     "prebuild": "^11.0.4",
