feat: switch to Github managed M1 runners that are in beta now
Related to https://github.com/actions/runner-images/issues/8439

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,6 @@ on:
 
 jobs:
   prebuild:
-    # There are currently no Github managed Apple Silicon runners available:
-    # https://github.com/actions/runner-images/issues/2187
-    #
-    # HashiCorp manages their own Apple Silicon runners for Github but they
-    # are only available to non-public repositories, hence we maintain a
-    # private mirror of this repository to build for Apple Silicon. To keep
-    # things simple, we run the entire CI from that mirror.
-    if: github.repository == 'cdktf/node-pty-prebuilt-multiarch-private'
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -81,7 +73,9 @@ jobs:
             os: macOS-latest
           
           - name: darwin-arm64
-            os: ['self-hosted', 'macOS', 'ARM64']
+            # xlarge is arm64
+            # https://docs.github.com/en/actions/using-github-hosted-runners/about-larger-runners/about-larger-runners#about-macos-larger-runners
+            os: macos-13-xlarge
 
           - name: windows-x86_64
             os: windows-2022
